crates/oxutrm-client/src/snapshots/oxutrm_client__popup__tests__snapshot_40x12.snap
---
source: crates/oxutrm-client/src/popup.rs
expression: "text_of(&layout_popup(&view(), TermSize { cols: 40, rows: 12 }))"
---
╭ oxutrm · bastion ────────────────╮
│ ● SILENT                         │
│ silent for 6s                    │
│ rtt — · min 30 / avg 35 / max 52 │
│ ms                               │
│ standby: searching…              │
│ rtt ▄▆ █                         │
│ event-30                         │
│ q quit  c config                 │
╰──────────────────────────────────╯
