crates/oxutrm-client/src/snapshots/oxutrm_client__popup__tests__snapshot_80x24.snap
---
source: crates/oxutrm-client/src/popup.rs
expression: "text_of(&layout_popup(&view(), TermSize { cols: 80, rows: 24 }))"
---
╭ oxutrm · bastion · f00dcafe ─────────────────────────────────────────╮
│ ● SILENT   silent 6 s                                                │
│ standby probe   probing…                                             │
│ ssh rebuild     in 14 s                                              │
│ rtt   —  (30–52)  ▄▆ █                                               │
│ loss  0.0 %  ↑ 0 B/s  ↓ 0 B/s                                        │
├ standby ─────────────────────────────────────────────────────────────┤
│ searching…                                                           │
├ recent ──────────────────────────────────────────────────────────────┤
│ 14:13  event-21                                                      │
│ 14:13  event-22                                                      │
│ 14:13  event-23                                                      │
│ 14:13  event-24                                                      │
│ 14:13  event-25                                                      │
│ 14:13  event-26                                                      │
│ 14:13  event-27                                                      │
│ 14:13  event-28                                                      │
│ 14:13  event-29                                                      │
│ 14:13  event-30                                                      │
├──────────────────────────────────────────────────────────────────────┤
│ q quit  c config                                                     │
╰──────────────────────────────────────────────────────────────────────╯
