crates/oxutrm-client/src/snapshots/oxutrm_client__popup__tests__snapshot_sessions_19x5.snap
---
source: crates/oxutrm-client/src/popup.rs
expression: "text_of(&layout_sessions(&sessions_view(), TermSize { cols: 19, rows: 5 }))"
---
oxutrm sessions · b
