crates/oxutrm-client/src/snapshots/oxutrm_client__popup__tests__snapshot_sessions_80x24.snap
---
source: crates/oxutrm-client/src/popup.rs
expression: "text_of(&layout_sessions(&sessions_view(), TermSize { cols: 80, rows: 24 }))"
---
╭ sessions on thinlinc ─────────────────────╮
│   a3f9c01e  fish  Oct 05  80×24   in use  │
│ ▸ build     bash  09:14   120×40  this    │
│   logs      zsh   11:02   120×40          │
│   + new session                           │
├───────────────────────────────────────────┤
│ ⏎ switch  n new  r rename  x kill  q back │
╰───────────────────────────────────────────╯
