crates/oxutrm-client/src/snapshots/oxutrm_client__popup__tests__snapshot_sessions_at_connect_40x12.snap
---
source: crates/oxutrm-client/src/popup.rs
expression: "text_of(&layout_sessions(&v, TermSize { cols: 40, rows: 12 }))"
---
╭ sessions on thinlinc ────────────╮
│ no reply 4 s                     │
│ ▸ logs      zsh  11:02  120×40   │
│   + new session                  │
│ the link is down; try again onc… │
├──────────────────────────────────┤
│ ⏎ n r x q quit                   │
╰──────────────────────────────────╯
