crates/oxutrm-client/src/snapshots/oxutrm_client__popup__tests__snapshot_sessions_three_rows_40x12.snap
---
source: crates/oxutrm-client/src/popup.rs
expression: "text_of(&layout_sessions(&sessions_view(), TermSize { cols: 40, rows: 12 }))"
---
╭ sessions on thinlinc ────────────╮
│   a3f9c01e  fish  Oct 05  in use │
│ ▸ build     bash  09:14   this   │
│   logs      zsh   11:02          │
│   + new session                  │
├──────────────────────────────────┤
│ ⏎ n r x q back                   │
╰──────────────────────────────────╯
